--- a/portfolio.html
+++ b/portfolio.html
@@ -54,6 +54,7 @@
             <img
               src="./images/portfolio/img.jpg"
               alt="banking app screenshots"
+              width="360"
             />
             <h2>Banking App Interface Concept</h2>
             <p>App</p>
@@ -62,12 +63,17 @@
             <img
               src="./images/portfolio/img2.jpg"
               alt="smartphone pay qr-code"
+              width="360"
             />
             <h2>Cashless Payment</h2>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio/img3.jpg" alt="macbook and iphone" />
+            <img
+              src="./images/portfolio/img3.jpg"
+              alt="macbook and iphone"
+              width="360"
+            />
             <h2>Meditation App</h2>
             <p>App</p>
           </li>
@@ -75,6 +81,7 @@
             <img
               src="./images/portfolio/img4.jpg"
               alt="hands on the rule in a car"
+              width="360"
             />
             <h2>Taxi Service</h2>
             <p>Marketing</p>
@@ -83,6 +90,7 @@
             <img
               src="./images/portfolio/img5.jpg"
               alt="wallpapers for smartphone"
+              width="360"
             />
             <h2>Screen Illustrations</h2>
             <p>Design</p>
@@ -91,6 +99,7 @@
             <img
               src="./images/portfolio/img6.jpg"
               alt="smiling girl with iphone and headphones"
+              width="360"
             />
             <h2>Online Courses</h2>
             <p>Marketing</p>
@@ -99,6 +108,7 @@
             <img
               src="./images/portfolio/img7.jpg"
               alt="instagran stories screenshots"
+              width="360"
             />
             <h2>Instagram Stories Concept</h2>
             <p>Design</p>
@@ -107,6 +117,7 @@
             <img
               src="./images/portfolio/img8.jpg"
               alt="bag with vegetables in hand"
+              width="360"
             />
             <h2>Organic Food</h2>
             <p>Web Site</p>
@@ -115,6 +126,7 @@
             <img
               src="./images/portfolio/img9.jpg"
               alt="making pattern on cup of coffee"
+              width="360"
             />
             <h2>Fresh Coffee</h2>
             <p>Web Site</p>
