add line-hight in multiplier

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,14 +49,14 @@
           <li><button type="button" class="button-port">Design</button></li>
           <li><button type="button" class="button-port">Marketing</button></li>
         </ul>
-        <ul>
+        <ul class="portfolio-list">
           <li>
             <img
               src="./images/portfolio/img.jpg"
               alt="banking app screenshots"
               width="360"
             />
-            <h2>Banking App Interface Concept</h2>
+            <h2 class="portfolio-name">Banking App Interface Concept</h2>
             <p>App</p>
           </li>
           <li>
@@ -65,7 +65,7 @@
               alt="smartphone pay qr-code"
               width="360"
             />
-            <h2>Cashless Payment</h2>
+            <h2 class="portfolio-name">Cashless Payment</h2>
             <p>Marketing</p>
           </li>
           <li>
@@ -74,7 +74,7 @@
               alt="macbook and iphone"
               width="360"
             />
-            <h2>Meditation App</h2>
+            <h2 class="portfolio-name">Meditation App</h2>
             <p>App</p>
           </li>
           <li>
@@ -83,7 +83,7 @@
               alt="hands on the rule in a car"
               width="360"
             />
-            <h2>Taxi Service</h2>
+            <h2 class="portfolio-name">Taxi Service</h2>
             <p>Marketing</p>
           </li>
           <li>
@@ -92,7 +92,7 @@
               alt="wallpapers for smartphone"
               width="360"
             />
-            <h2>Screen Illustrations</h2>
+            <h2 class="portfolio-name">Screen Illustrations</h2>
             <p>Design</p>
           </li>
           <li>
@@ -101,7 +101,7 @@
               alt="smiling girl with iphone and headphones"
               width="360"
             />
-            <h2>Online Courses</h2>
+            <h2 class="portfolio-name">Online Courses</h2>
             <p>Marketing</p>
           </li>
           <li>
@@ -110,7 +110,7 @@
               alt="instagran stories screenshots"
               width="360"
             />
-            <h2>Instagram Stories Concept</h2>
+            <h2 class="portfolio-name">Instagram Stories Concept</h2>
             <p>Design</p>
           </li>
           <li>
@@ -119,7 +119,7 @@
               alt="bag with vegetables in hand"
               width="360"
             />
-            <h2>Organic Food</h2>
+            <h2 class="portfolio-name">Organic Food</h2>
             <p>Web Site</p>
           </li>
           <li>
@@ -128,7 +128,7 @@
               alt="making pattern on cup of coffee"
               width="360"
             />
-            <h2>Fresh Coffee</h2>
+            <h2 class="portfolio-name">Fresh Coffee</h2>
             <p>Web Site</p>
           </li>
         </ul>
