--- a/portfolio.html
+++ b/portfolio.html
@@ -19,22 +19,26 @@
     <!-- Хедер -->
     <header class="header">
       <nav>
-        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-        <ul class="site-nav no-list">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
+        <a href="./index.html" class="logo link">Web<span>Studio</span></a>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="main-menu link">Studio</a></li>
+          <li>
+            <a href="./portfolio.html" class="main-menu link">Portfolio</a>
+          </li>
+          <li><a href="" class="main-menu link">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul class="auth-nav no-list">
+        <ul class="auth-nav list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="contact-menu link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="contact-menu link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -138,7 +142,7 @@
     <!-- Футер -->
     <footer class="footer">
       <a href="./index.html" class="logo"
-        ><span>Web</span><span class="logo-footer">Studio</span></a
+        >Web<span class="logo-footer">Studio</span></a
       >
       <p>
         Increase the flow of customers and sales for your business with digital
