--- a/portfolio.html
+++ b/portfolio.html
@@ -46,14 +46,14 @@
     <main>
       <section>
         <h1>Portfolio of WebStudio</h1>
-        <ul class="button-list no-list">
+        <ul class="button-list list">
           <li><button type="button" class="button-port">All</button></li>
           <li><button type="button" class="button-port">Web Site</button></li>
           <li><button type="button" class="button-port">App</button></li>
           <li><button type="button" class="button-port">Design</button></li>
           <li><button type="button" class="button-port">Marketing</button></li>
         </ul>
-        <ul class="portfolio-list">
+        <ul class="portfolio-list list">
           <li>
             <img
               src="./images/portfolio/img.jpg"
