--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="" class="main-menu link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts">
         <ul class="auth-nav list">
           <li>
             <a href="mailto:info@devstudio.com" class="contact-menu link"
@@ -52,32 +52,32 @@
 
       <!-- Наші перваги -->
       <section class="section">
-        <h2 class="section-title">Our advantages</h2>
-        <ul class="advantages-list no-list">
+        <h2 class="section-title" hidden>Our advantages</h2>
+        <ul class="advantages-list list">
           <li>
             <h3 class="title">Strategy</h3>
-            <p>
+            <p class="paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3 class="title">Punctuality</h3>
-            <p>
+            <p class="paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="title">Diligence</h3>
-            <p>
+            <p class="paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="title">Technologies</h3>
-            <p>
+            <p class="paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -88,7 +88,7 @@
       <!-- Що ми робимо -->
       <section class="section">
         <h2 class="section-title">What are we doing</h2>
-        <ul class="work no-list">
+        <ul class="work list">
           <li><img src="./images/img1.jpg" alt="iMac" width="360" /></li>
           <li>
             <img src="./images/img2.jpg" alt="iPhone Screenshot" width="360" />
@@ -102,7 +102,7 @@
       <!-- Наша команда -->
       <section class="section">
         <h2 class="section-title">Our Team</h2>
-        <ul class="team no-list">
+        <ul class="team list">
           <li>
             <img src="./images/img4.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="name">Mark Guerrero</h3>
