--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </section>
 
       <!-- Наші перваги -->
-      <section class="section">
+      <section>
         <h2 class="section-title" hidden>Our advantages</h2>
         <ul class="advantages-list list">
           <li>
@@ -86,7 +86,7 @@
       </section>
 
       <!-- Що ми робимо -->
-      <section class="section">
+      <section>
         <h2 class="section-title">What are we doing</h2>
         <ul class="work list">
           <li><img src="./images/img1.jpg" alt="iMac" width="360" /></li>
@@ -100,28 +100,28 @@
       </section>
 
       <!-- Наша команда -->
-      <section class="section">
+      <section class="team">
         <h2 class="section-title">Our Team</h2>
-        <ul class="team list">
-          <li>
+        <ul class="teammates list">
+          <li class="team-list">
             <img src="./images/img4.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="name">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="paragraph">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img src="./images/img5.jpg" alt="Tom Ford" width="264" />
             <h3 class="name">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="paragraph">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img src="./images/img6.jpg" alt="Camila Garcia" width="264" />
             <h3 class="name">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="paragraph">Marketing</p>
           </li>
-          <li>
+          <li class="team-list">
             <img src="./images/img7.jpg" alt="Daniel Wilson" width="264" />
             <h3 class="name">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="paragraph">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -129,7 +129,7 @@
 
     <!-- Футер -->
     <footer class="footer">
-      <a href="./index.html" class="logo"
+      <a href="./index.html" class="logo link"
         >Web<span class="logo-footer">Studio</span></a
       >
       <p>
