--- a/portfolio.html
+++ b/portfolio.html
@@ -141,7 +141,7 @@
 
     <!-- Футер -->
     <footer class="footer">
-      <a href="./index.html" class="logo"
+      <a href="./index.html" class="logo link"
         >Web<span class="logo-footer">Studio</span></a
       >
       <p>
