--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
           <li><a href="" class="main-menu link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts">
         <ul class="auth-nav list">
           <li>
             <a href="mailto:info@devstudio.com" class="contact-menu link"
@@ -45,7 +45,7 @@
     </header>
     <main>
       <section>
-        <h1>Portfolio of WebStudio</h1>
+        <h1 hidden>Portfolio of WebStudio</h1>
         <ul class="button-list list">
           <li><button type="button" class="button-port">All</button></li>
           <li><button type="button" class="button-port">Web Site</button></li>
@@ -55,13 +55,15 @@
         </ul>
         <ul class="portfolio-list list">
           <li>
-            <img
-              src="./images/portfolio/img.jpg"
-              alt="banking app screenshots"
-              width="360"
-            />
-            <h2 class="portfolio-name">Banking App Interface Concept</h2>
-            <p>App</p>
+            <a href="" class="link"
+              ><img
+                src="./images/portfolio/img.jpg"
+                alt="banking app screenshots"
+                width="360"
+              />
+              <h2 class="portfolio-name">Banking App Interface Concept</h2>
+              <p>App</p></a
+            >
           </li>
           <li>
             <img
