--- a/portfolio.html
+++ b/portfolio.html
@@ -66,76 +66,92 @@
             >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img2.jpg"
-              alt="smartphone pay qr-code"
-              width="360"
-            />
-            <h2 class="portfolio-name">Cashless Payment</h2>
-            <p>Marketing</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img2.jpg"
+                alt="smartphone pay qr-code"
+                width="360"
+              />
+              <h2 class="portfolio-name">Cashless Payment</h2>
+              <p>Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img3.jpg"
-              alt="macbook and iphone"
-              width="360"
-            />
-            <h2 class="portfolio-name">Meditation App</h2>
-            <p>App</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img3.jpg"
+                alt="macbook and iphone"
+                width="360"
+              />
+              <h2 class="portfolio-name">Meditation App</h2>
+              <p>App</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img4.jpg"
-              alt="hands on the rule in a car"
-              width="360"
-            />
-            <h2 class="portfolio-name">Taxi Service</h2>
-            <p>Marketing</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img4.jpg"
+                alt="hands on the rule in a car"
+                width="360"
+              />
+              <h2 class="portfolio-name">Taxi Service</h2>
+              <p>Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img5.jpg"
-              alt="wallpapers for smartphone"
-              width="360"
-            />
-            <h2 class="portfolio-name">Screen Illustrations</h2>
-            <p>Design</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img5.jpg"
+                alt="wallpapers for smartphone"
+                width="360"
+              />
+              <h2 class="portfolio-name">Screen Illustrations</h2>
+              <p>Design</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img6.jpg"
-              alt="smiling girl with iphone and headphones"
-              width="360"
-            />
-            <h2 class="portfolio-name">Online Courses</h2>
-            <p>Marketing</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img6.jpg"
+                alt="smiling girl with iphone and headphones"
+                width="360"
+              />
+              <h2 class="portfolio-name">Online Courses</h2>
+              <p>Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img7.jpg"
-              alt="instagran stories screenshots"
-              width="360"
-            />
-            <h2 class="portfolio-name">Instagram Stories Concept</h2>
-            <p>Design</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img7.jpg"
+                alt="instagran stories screenshots"
+                width="360"
+              />
+              <h2 class="portfolio-name">Instagram Stories Concept</h2>
+              <p>Design</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img8.jpg"
-              alt="bag with vegetables in hand"
-              width="360"
-            />
-            <h2 class="portfolio-name">Organic Food</h2>
-            <p>Web Site</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img8.jpg"
+                alt="bag with vegetables in hand"
+                width="360"
+              />
+              <h2 class="portfolio-name">Organic Food</h2>
+              <p>Web Site</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img9.jpg"
-              alt="making pattern on cup of coffee"
-              width="360"
-            />
-            <h2 class="portfolio-name">Fresh Coffee</h2>
-            <p>Web Site</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img9.jpg"
+                alt="making pattern on cup of coffee"
+                width="360"
+              />
+              <h2 class="portfolio-name">Fresh Coffee</h2>
+              <p>Web Site</p></a
+            >
           </li>
         </ul>
       </section>
