--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                 width="360"
               />
               <h2 class="portfolio-name">Banking App Interface Concept</h2>
-              <p>App</p></a
+              <p class="paragraph">App</p></a
             >
           </li>
           <li>
@@ -73,7 +73,7 @@
                 width="360"
               />
               <h2 class="portfolio-name">Cashless Payment</h2>
-              <p>Marketing</p>
+              <p class="paragraph">Marketing</p>
             </a>
           </li>
           <li>
@@ -84,7 +84,7 @@
                 width="360"
               />
               <h2 class="portfolio-name">Meditation App</h2>
-              <p>App</p></a
+              <p class="paragraph">App</p></a
             >
           </li>
           <li>
@@ -95,7 +95,7 @@
                 width="360"
               />
               <h2 class="portfolio-name">Taxi Service</h2>
-              <p>Marketing</p></a
+              <p class="paragraph">Marketing</p></a
             >
           </li>
           <li>
@@ -106,7 +106,7 @@
                 width="360"
               />
               <h2 class="portfolio-name">Screen Illustrations</h2>
-              <p>Design</p></a
+              <p class="paragraph">Design</p></a
             >
           </li>
           <li>
@@ -117,7 +117,7 @@
                 width="360"
               />
               <h2 class="portfolio-name">Online Courses</h2>
-              <p>Marketing</p></a
+              <p class="paragraph">Marketing</p></a
             >
           </li>
           <li>
@@ -128,7 +128,7 @@
                 width="360"
               />
               <h2 class="portfolio-name">Instagram Stories Concept</h2>
-              <p>Design</p></a
+              <p class="paragraph">Design</p></a
             >
           </li>
           <li>
@@ -139,7 +139,7 @@
                 width="360"
               />
               <h2 class="portfolio-name">Organic Food</h2>
-              <p>Web Site</p></a
+              <p class="paragraph">Web Site</p></a
             >
           </li>
           <li>
@@ -150,7 +150,7 @@
                 width="360"
               />
               <h2 class="portfolio-name">Fresh Coffee</h2>
-              <p>Web Site</p></a
+              <p class="paragraph">Web Site</p></a
             >
           </li>
         </ul>
