--- a/portfolio.html
+++ b/portfolio.html
@@ -60,10 +60,9 @@
                 src="./images/portfolio/img.jpg"
                 alt="banking app screenshots"
                 width="360"
-              />
-              <h2 class="portfolio-name">Banking App Interface Concept</h2>
-              <p class="paragraph">App</p></a
-            >
+            /></a>
+            <h2 class="portfolio-name">Banking App Interface Concept</h2>
+            <p class="paragraph">App</p>
           </li>
           <li>
             <a href="" class="link">
@@ -71,10 +70,9 @@
                 src="./images/portfolio/img2.jpg"
                 alt="smartphone pay qr-code"
                 width="360"
-              />
-              <h2 class="portfolio-name">Cashless Payment</h2>
-              <p class="paragraph">Marketing</p>
-            </a>
+            /></a>
+            <h2 class="portfolio-name">Cashless Payment</h2>
+            <p class="paragraph">Marketing</p>
           </li>
           <li>
             <a href="" class="link">
@@ -82,10 +80,9 @@
                 src="./images/portfolio/img3.jpg"
                 alt="macbook and iphone"
                 width="360"
-              />
-              <h2 class="portfolio-name">Meditation App</h2>
-              <p class="paragraph">App</p></a
-            >
+            /></a>
+            <h2 class="portfolio-name">Meditation App</h2>
+            <p class="paragraph">App</p>
           </li>
           <li>
             <a href="" class="link">
@@ -93,10 +90,9 @@
                 src="./images/portfolio/img4.jpg"
                 alt="hands on the rule in a car"
                 width="360"
-              />
-              <h2 class="portfolio-name">Taxi Service</h2>
-              <p class="paragraph">Marketing</p></a
-            >
+            /></a>
+            <h2 class="portfolio-name">Taxi Service</h2>
+            <p class="paragraph">Marketing</p>
           </li>
           <li>
             <a href="" class="link">
@@ -104,10 +100,9 @@
                 src="./images/portfolio/img5.jpg"
                 alt="wallpapers for smartphone"
                 width="360"
-              />
-              <h2 class="portfolio-name">Screen Illustrations</h2>
-              <p class="paragraph">Design</p></a
-            >
+            /></a>
+            <h2 class="portfolio-name">Screen Illustrations</h2>
+            <p class="paragraph">Design</p>
           </li>
           <li>
             <a href="" class="link">
@@ -115,10 +110,9 @@
                 src="./images/portfolio/img6.jpg"
                 alt="smiling girl with iphone and headphones"
                 width="360"
-              />
-              <h2 class="portfolio-name">Online Courses</h2>
-              <p class="paragraph">Marketing</p></a
-            >
+            /></a>
+            <h2 class="portfolio-name">Online Courses</h2>
+            <p class="paragraph">Marketing</p>
           </li>
           <li>
             <a href="" class="link">
@@ -126,10 +120,9 @@
                 src="./images/portfolio/img7.jpg"
                 alt="instagran stories screenshots"
                 width="360"
-              />
-              <h2 class="portfolio-name">Instagram Stories Concept</h2>
-              <p class="paragraph">Design</p></a
-            >
+            /></a>
+            <h2 class="portfolio-name">Instagram Stories Concept</h2>
+            <p class="paragraph">Design</p>
           </li>
           <li>
             <a href="" class="link">
@@ -137,10 +130,9 @@
                 src="./images/portfolio/img8.jpg"
                 alt="bag with vegetables in hand"
                 width="360"
-              />
-              <h2 class="portfolio-name">Organic Food</h2>
-              <p class="paragraph">Web Site</p></a
-            >
+            /></a>
+            <h2 class="portfolio-name">Organic Food</h2>
+            <p class="paragraph">Web Site</p>
           </li>
           <li>
             <a href="" class="link">
@@ -148,10 +140,9 @@
                 src="./images/portfolio/img9.jpg"
                 alt="making pattern on cup of coffee"
                 width="360"
-              />
-              <h2 class="portfolio-name">Fresh Coffee</h2>
-              <p class="paragraph">Web Site</p></a
-            >
+            /></a>
+            <h2 class="portfolio-name">Fresh Coffee</h2>
+            <p class="paragraph">Web Site</p>
           </li>
         </ul>
       </section>
