--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,9 @@
     <!-- Хедер -->
     <header class="header">
       <nav>
-        <a href="./index.html" class="logo link">Web<span>Studio</span></a>
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-header">Studio</span></a
+        >
         <ul class="site-nav list">
           <li><a href="./index.html" class="main-menu link">Studio</a></li>
           <li>
