i can't find error

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
       </nav>
       <address class="contacts">
-        <ul class="auth-nav list">
+        <ul class="contacts-list list">
           <li>
             <a href="mailto:info@devstudio.com" class="contact-menu link"
               >info@devstudio.com</a
