--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 
   <body>
     <!-- Хедер -->
-    <header class="header">
+    <header>
       <nav>
         <a href="./index.html" class="logo link"
           >Web<span class="logo-header">Studio</span></a
